--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
+  	 <div class='links'>
+  	   <a ng-href='#/inbox'>Skrzynka odbiorcza</a> 
+  	   <a ng-href='#/sent'>Wysłane</a> 
+		<a ng-href='#/new'>Nowa</a>  
+		<a ng-href='#/preview'>Podgląd</a> 	 
+		<a ng-href='#/conf'>Konfiguracja</a> <br><br>	
+  	 </div>
     <div ng-view></div>
     
     <!--libraries-->
