--- a/src/inbox/inbox.html
+++ b/src/inbox/inbox.html
@@ -1,5 +1,5 @@
 <div ng-controller="InboxCtrl">
         <div class="item">
-             EMAIL INBOX
+             SKRZYNKA ODBIORCZA
         </div>
 </div>
