--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   	 <div class='links'>
   	   <a ng-href='#/inbox'>Skrzynka odbiorcza</a> 
   	   <a ng-href='#/sent'>Wysłane</a> 
-		<a ng-href='#/new'>Nowa</a>  
-		<a ng-href='#/preview'>Podgląd</a> 	 
-		<a ng-href='#/conf'>Konfiguracja</a> <br><br>	
+		<a ng-href='#/create'>Nowa</a>  
+		<a ng-href='#/view'>Podgląd</a> 	 
+		<a ng-href='#/config'>Konfiguracja</a> <br><br>	
   	 </div>
     <div ng-view></div>
     
