--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
+        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
           <a class="navbar-brand" href="#">Dziobak.com</a>
         </div>
         <!--
