--- a/src/inbox/inbox.html
+++ b/src/inbox/inbox.html
@@ -1,5 +1,8 @@
 <div ng-controller="InboxCtrl">
-          <div class="table-responsive">
+        
+<!--<hello-world/>-->
+		<div class="table-responsive">
+
             <table class="table table-hover">
               <thead>
                 <tr>
@@ -9,12 +12,14 @@
                 </tr>
               </thead>
               <tbody>
-                <tr ng-repeat="mail in emailsRes" class=read-{{mail.read}}>
+                <tr ng-repeat="mail in emails" class=read-{{mail.read}}>
                   <td>{{mail.sender}}</td>
-                  <td>{{mail.title}}</td>
+                  <td><a href="#/view/{{mail.id}}" >{{mail.title}}</a></td>
                   <td>{{mail.received}}</td>
                 </tr>
               </tbody>
             </table>
-          </div>
+       </div>
 </div>
+
+
