deleting mail from inbox

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container">
         <div class="navbar-header">
         <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-          <a class="navbar-brand" href="#">Dziobak.com</a>
+          <a class="navbar-brand" href="#/inbox">Dziobak.com</a>
         </div>
         <!--
         <div id="navbar" class="navbar-collapse collapse">
@@ -36,7 +36,6 @@
             <li class="active"> <a href='#/inbox'>Skrzynka odbiorcza</a> </li>
             <li><a ng-href='#/sent'>Wysłane</a> </li>
             <li><a ng-href='#/create'>Nowa</a> </li>
-            <li><a ng-href='#/view'>Podgląd</a> </li>
             <li><a ng-href='#/config'>Konfiguracja</a> </li>       
       </ul>  
   </div>
