--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 		  <div class="row">
   <div class="col-md-2">
 		<ul class="nav nav-pills nav-stacked" role="tablist">
-            <li class="active"> <a href='#/inbox'>Skrzynka odbiorcza</a> </li>
-            <li><a ng-href='#/sent'>Wysłane</a> </li>
-            <li><a ng-href='#/create'>Nowa</a> </li>
-            <li><a ng-href='#/config'>Konfiguracja</a> </li>       
+            <li><a is-active-nav href='#/inbox'>Skrzynka odbiorcza</a> </li>
+            <li><a is-active-nav href='#/sent'>Wysłane</a> </li>
+            <li><a is-active-nav href='#/create'>Nowa</a> </li>
+            <li><a is-active-nav href='#/config'>Konfiguracja</a> </li>       
       </ul>  
   </div>
   <div class="col-md-10">
