--- a/src/sent/sent.html
+++ b/src/sent/sent.html
@@ -1,23 +1,3 @@
-<div ng-controller="SentCtrl">
-        
-<!--<hello-world/>-->
-		<div class="table-responsive">
-
-            <table class="table table-hover">
-              <thead>
-                <tr>
-                  <th>Odbiorcy</th>
-                  <th>Tytuł</th>
-                  <th>Data</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr ng-repeat="mail in sentemails">
-                  <td>{{mail.receivers}}</td>
-                  <td><a href="#/view/{{mail.id}}" >{{mail.title}}</a></td>
-                  <td>{{mail.sent}}</td>
-                </tr>
-              </tbody>
-            </table>
-       </div>
+<div ng-controller="SentCtrl" ng-init="init()">
+		<list-view list='sentemails'></list-view>
 </div>
