--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="lib/angular.js"></script>
     <script src="lib/angular-route.js"></script>
      <script src="css/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
+     <script src="node_modules/angular-local-storage/dist/angular-local-storage.js"></script>
     
     <!--app files
     <script src="src/app.js"></script>
