--- a/src/configuration/configuration.html
+++ b/src/configuration/configuration.html
@@ -2,4 +2,12 @@
         <div class="item">
              KONFIGURACJA
         </div>
+    
+        <ul class="dropdown-menu">
+
+  <li><a href="#" class="change-style-menu-item" rel="assets/bootstrap/bootstrap.min.css"><i class="icon-fixed-width icon-pencil"></i> bootstrap.min.css (Default)</a></li>
+
+  <li><a href="#" class="change-style-menu-item" rel="assets/bootstrap/bootstrap.cyborg.min.css"><i class="icon-fixed-width icon-pencil"></i> bootstrap.cyborg.min.css (Cyborg)</a></li>
+
+</ul>
 </div>
