--- a/src/preview/preview.html
+++ b/src/preview/preview.html
@@ -4,5 +4,6 @@
 	<p> {{email.content}}</p>
 	<p> Otrzymano: {{email.received | date:'yyyy-MM-dd HH:mm:ss'}}</p>
 	
-	<button ng-click="delete()">DELETE</button>
+	<button ng-click="delete()">USUŃ</button>
+	<button ng-click="back()">POWRÓT</button>
 </div>
