--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link href="css/bootstrap-3.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" ng-controller="ConfigurationCtrl" title="main" ng-href="css/bootstrap-3.3.2-dist/css/{{ localcss }}.bootstrap.min.css">
   </head>
   <body>
   
