walidacja - informacje o błędach

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html ng-app="EmailApp">
-  <head>
+  <head ng-controller="ConfigurationCtrl">
     <title>Dziobak.com - Prawdopodobnie najlepszy klient poczty jaki kiedykolwiek powstał</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" ng-controller="ConfigurationCtrl" title="main" ng-href="css/bootstrap-3.3.2-dist/css/{{ localcss }}.bootstrap.min.css">
+    <link rel="stylesheet" title="main" ng-href="css/bootstrap-3.3.2-dist/css/{{ localcss }}.bootstrap.min.css">
   </head>
   <body>
   
