--- a/src/new/new.html
+++ b/src/new/new.html
@@ -5,6 +5,8 @@
            <label for="inputEmail" class="col-sm-2 control-label">Odbiorca {{adress.id}}</label>
             <div class="col-sm-10">
                 <input type="email" class="form-control" ng-model="emails[adress.id-1]" placeholder="Adres odbiorcy" name="email" required>
+                <span ng-show="messageForm.email.$error.required && submitted">Podaj email odbiorcy</span>
+                <span ng-show="messageForm.email.$error.email && submitted">Niepoprawny adres email</span>
             </div>
             
         </div>
@@ -24,12 +26,14 @@
              <label for="inputTitle" class="col-sm-2 control-label">Tytuł</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" ng-model="inputTitle" placeholder="Jakiś tytuł" name="inputTitle" required >
+                  <span ng-show="messageForm.inputTitle.$error.required && submitted">Podaj tytuł maila</span>
             </div>
         </div>
         <div class="form-group" ng-class="{ 'has-error': messageForm.inputContent.$invalid && submitted}">
             <label for="inputContent" class="col-sm-2 control-label">Treść</label>
             <div class="col-sm-10">
                 <textarea class="form-control" ng-model="inputContent" placeholder="Treść wiadomości" name="inputContent" rows="10" required></textarea>
+                  <span ng-show="messageForm.inputContent.$error.required && submitted">Podaj treść wiadomości</span>
             </div>
         </div>
         <div class="form-group">
