--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" title="main" ng-href="css/bootstrap-3.3.2-dist/css/{{ localcss }}.bootstrap.min.css">
+    <link rel="stylesheet" title="main" ng-href="css/bootstrap-3.3.2-dist/css/{{ data.localcss }}.bootstrap.min.css">
   </head>
   <body>
   
    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
           <a class="navbar-brand" href="#/inbox">Dziobak.com</a>
         </div>
       </div>
