--- a/src/configuration/configuration.html
+++ b/src/configuration/configuration.html
@@ -14,7 +14,7 @@
             
              <div class="form-group">
                 <label>Czas odświeżania (w minutach)</label>
-                <select class="form-control" ng-model="frequencies" ng-init="frequencies = result[0]" ng-options="o for o in result">
+                <select class="form-control" ng-model="frequencies" ng-options="o for o in result">
                 </select> 
             </div>         
          </form>
