--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <script src="lib/angular-route.js"></script>
     <script src="css/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
     <script src="node_modules/angular-local-storage/dist/angular-local-storage.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.tpl.min.js"></script>
+    <script src="lib/angular-strap.min.js"></script>
+    <script src="lib/angular-strap.tpl.min.js"></script>
     
     <!--app files
     <script src="src/app.js"></script>
